--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -1,8 +1,7 @@
-@import '@/config/styles/_variables';
-
 $padding: 1px;
 $color: #fff;
 .nav-bar {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   display: flex;
@@ -13,6 +12,7 @@ $color: #fff;
   padding: $padding;
   background-color: #2a2a2a;
   color: $color;
+  z-index: 3;
 }
 .nav-bar .signin-wrap {
   height: $navbarHeight;
