--- a/client/src/view/Details.scss
+++ b/client/src/view/Details.scss
@@ -1,9 +1,8 @@
-@import '@/config/styles/_variables';
-
 #details .groups {
   max-width: $contentMaxWidth;
   padding-left: $contentPadding;
   padding-right: $contentPadding;
+  overflow: hidden;
 }
 @media screen and (max-width: 1024px) {
   #details .groups {
@@ -21,17 +20,20 @@
 }
 
 #details .group-wrapper {
+  display: flex; 
   display: -webkit-flex;
-  display: flex;
   flex-direction: row;
   width: $contentMaxWidth;
+  margin-bottom: 60px;
 }
 #details .group-left {
-  max-width: 350px;
-  width: 20vw;
+  flex: none;
+  max-width: 240px;
+  width: 15%;
+  color: #fff;
 }
 #details .group-content {
-  flex: auto;
+  width: 100%;
   font-size: 1rem;
   letter-spacing: 0;
   line-height: 1.625;
@@ -53,12 +55,12 @@
 
 #details .group-left .group-header { 
   padding-right: 1.25rem;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   letter-spacing: 0;
   line-height: 1.25rem;
 }
  
-#details .group-left .group-sticky {
-  position: sticky;
+#details .group-sticky .group-header {
+  position: fixed;
   top: $navbarHeight + $storeHeaderDHeight + $storeHeaderDPadding;
 }
